project-XXX-YYY pages extend a new project-base.html template.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,21 +3,17 @@
 <!-- The body for the about page. -->
 {% block content %}
 <main class="my-main-flex-centering my-main-home-page">
+    <!-- <main class="my-main-flex-centering"> -->
 
-    <p class="w3-container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, eum ipsum? Harum quas eveniet assumenda beatae
-        voluptates vitae tempore, amet mollitia. Sit explicabo rem id quia officiis minus recusandae quasi unde illum,
-        architecto ipsa cupiditate quidem assumenda non sequi mollitia ullam totam! Minus assumenda pariatur doloremque
-        asperiores esse perspiciatis iusto.
-    </p>
-    <p class="w3-container">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aut eum amet. Eaque, harum modi. Laboriosam
-        itaque, dolores reiciendis odit repellendus laudantium quam sit temporibus quisquam tempore exercitationem, in
-        sint?
-    </p>
-    <p class="w3-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptas error, in vel repellat, voluptatum soluta
-        illo numquam nobis ad dicta officia, deserunt eveniet qui.
-    </p>
+    <div class="w3-container">
+        <p>
+        A portfolio site to showcase my web development projects.
+        </p>
+        Technologies used to build this site:
+        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
+        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
+        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Python</div>
+        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Flask</div>
+    </div>
 </main>
 {% endblock %}
