--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-<!-- Projects to be shown in a css grid via a for loop. -->
+<!-- Projects shown in a css grid via a for loop. -->
 <!-- Projects are described via a common dictionary format detailed in __init__.py. -->
 {% block content %}
 <main class="my-main-flex-centering">
