--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,20 +2,20 @@
 
 <!-- The body for the contact page. -->
 {% block content %}
-<main class="my-main-flex-centering my-contact-page">
-        <div class="w3-container w3-center my-contact">
+    <main class="w3-container w3-margin-bottom w3-margin-left">
+        <div class="w3-container my-contact">
             <a href="mailto:s.i.fraser@outlook.com" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
                 Email</a>
         </div>
-        <div class="w3-container w3-center my-contact">
+        <div class="w3-container my-contact">
             <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
                     class="fa-brands fa-linkedin"></i> LinkedIn</a>
         </div>
-        <div class="w3-container w3-center my-contact">
+        <div class="w3-container my-contact">
             <a href="https://bitbucket.org/weebucket/workspace/repositories" class="my-contact-link"><i
                     class="fa-brands fa-bitbucket"></i> Bitbucket</a>
         </div>
-        <div class="w3-container w3-center my-contact">
+        <div class="w3-container my-contact">
             <a href="https://github.com/KoalaTreeHotel" class="my-contact-link"><i class="fa-brands fa-github"></i>
                 GitHub</a>
         </div>
