--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,18 +2,24 @@
 
 <!-- The body for the about page. -->
 {% block content %}
-<main class="my-main-flex-centering my-main-home-page">
-    <!-- <main class="my-main-flex-centering"> -->
-
-    <div class="w3-container">
-        <p>
-        A portfolio site to showcase my web development projects.
-        </p>
-        Technologies used to build this site:
-        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
-        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Python</div>
-        <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Flask</div>
+<main class="w3-container my-home-page">
+    <div class="w3-margin-left">
+        <div class="w3-container">
+            <p>
+                A portfolio site to showcase web development projects.
+            </p>
+            <p>
+            Site is fully responsive and built with a mobile-first design.
+            </p>
+            Technologies used to build this site:
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>W3.CSS</li>
+                <li>Python</li>
+                <li>Flask</li>
+            </ul>
+        </div>
     </div>
 </main>
 {% endblock %}
