--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -4,8 +4,8 @@
 <p>
 A web based drum set played via the mouse or the keyboard.
 </p>
-Technologies used:
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS / SASS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">SASS</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">JavaScript</div>
 {% endblock %}
