--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -4,9 +4,9 @@
 <p>
 Copy the pattern generated. The more you correctly match the pattern, the longer the pattern gets.
 </p>
-Technologies used:
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS / SASS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">SASS</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">jQuery</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">JavaScript</div>
 {% endblock %}
