--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,23 +1,29 @@
 <!-- A simple 404 error page. -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe</title>
+    <title>Stewart Fraser</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/w3.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
+
 <body>
-   <main class="my-main-flex-centering my-main-error-page">
-    <h1>404 - Page Not Found</h1>
-    <p>
-        Sorry, we couldn't find the page you were looking for.
-    </p>
-    <a href="{{ url_for('home') }}">Go to home</a>
-   </main>
+    <main class="w3-panel">
+        <div class="w3-container">
+            <h1>404 - Page Not Found</h1>
+            <p>
+                Sorry, we couldn't find the page you were looking for.
+            </p>
+            <a href="{{ url_for('home') }}">Go to home</a>
+        </div>
+    </main>
 </body>
+
 </html>
