--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
 
         </nav>
 
-        <div class="w3-container w3-center w3-margin-top">
+        <div class="w3-container w3-margin-top w3-margin-bottom">
             <h1>Stewart Fraser</h1>
         </div>
 
