--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -4,8 +4,8 @@
 <p>
 A dice game for two players that stores the results in the browser's local storage "database".
 </p>
-Technologies used:
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS / SASS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">SASS</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">JavaScript</div>
 {% endblock %}
