--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -4,11 +4,11 @@
 <p>
 A simple microblogging page. A post is read by python / flask and then saved
 into a MongoDB database. Previous posts are read from the database and
-are then displayed on the page where they can be seen and deleted.
+are displayed on the page where they can be seen and deleted.
 </p>
-Technologies used:
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-projects-technologies-tag">W3.CSS</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">Flask</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">MongoDB</div>
