--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,10 +6,10 @@
     <div class="w3-margin-left">
         <div class="w3-container">
             <p>
-                A portfolio site to showcase web development projects.
+                A portfolio site to showcase my web development projects.
             </p>
             <p>
-            Site is fully responsive and built with a mobile-first design.
+                Site is fully responsive and built with a mobile-first design.
             </p>
             Technologies used to build this site:
             <ul>
