--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -2,7 +2,11 @@
 
 {% block project_info %}
 <p>
-A dice game for two players that stores the results in the browser's local storage "database".
+    A dice game for two players that stores the results in the browser's local storage "database".
+    The results will be retrievable after browser or computer shutdown.
+</p>
+<p>
+    Mobile-first responsiveness achieved via media queries.
 </p>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
