--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -2,7 +2,10 @@
 
 {% block project_info %}
 <p>
-A web based drum set played via the mouse or the keyboard.
+    A web based drum set played via the mouse or the keyboard.
+</p>
+<p>
+    Mobile-first responsiveness achieved via flexbox and media queries.
 </p>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
