--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -2,7 +2,11 @@
 
 {% block project_info %}
 <p>
-Copy the pattern generated. The more you correctly match the pattern, the longer the pattern gets.
+    Copy the pattern generated. The more you correctly match the pattern, the longer the pattern gets.
+    How many levels can you complete?
+</p>
+<p>
+    Mobile-first responsiveness achieved via flexbox and media queries.
 </p>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
