--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -69,6 +69,7 @@ body {
   padding-bottom: 0.5rem;
   margin: 16px 0 12px;
   transition: transform 0.2s ease-in-out;
+  max-width: 250px;
 }
 
 .my-projects-card-title {
@@ -120,14 +121,16 @@ body {
 }
 
 .my-project-heading {
-  margin: 0;
-  font-size: 1.75rem;
-  line-height: var(--line-height-for-readability);
+  font-size: 1.5rem; 
 }
 
-.my-project-content {
-  margin-bottom: 16px;
-  line-height: var(--line-height-for-readability);
+/* "View in production" animation */
+.my-project-production-tag {
+  transition: transform 0.2s ease-in-out;
+}
+
+.my-project-production-tag:hover {
+  transform: translate(4px, -4px);
 }
 
 /* Don't need to pad as width now much greater than
@@ -137,4 +140,3 @@ var(--line-height-for-readability) */
     padding: 0;
   }
 }
-
