--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -2,9 +2,12 @@
 
 {% block project_info %}
 <p>
-A simple microblogging page. A post is read by python / flask and then saved
-into a MongoDB database. Previous posts are read from the database and
-are displayed on the page where they can be seen and deleted.
+    A simple microblogging page. A post is read by python / flask and then saved
+    into a MongoDB database. Previous posts are read by python / flask from the database and
+    are displayed on the page where they can be seen and deleted.
+</p>
+<p>
+    Mobile-first responsiveness achieved via W3.CSS and media queries.
 </p>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
