--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,4 @@
-/***** STANDARD. *****/
+/***** DEFAULT. *****/
 *,
 *::before,
 *::after {
@@ -11,6 +11,7 @@
   --line-height-for-readability: 150%;
 }
 
+/***** ELEMENT SELECTORS. *****/
 html {
   font-family: "Lato", sans-serif;
 }
@@ -19,27 +20,33 @@ body {
   margin-top: 20px;
 }
 
-/***** NAVBAR. *****/
-.my-nav-link-inactive {
+/***** BASE PAGE, navbar and title. *****/
+.my-base-nav-link-inactive {
   text-decoration: none;
 }
 
-.my-nav-link-inactive:hover {
+.my-base-nav-link-inactive:hover {
   text-decoration: underline;
 }
 
 /* Need to use !important to override w3css colors */
-.my-nav-link-active {
+.my-base-nav-link-active {
   color: white!important;
   text-decoration: none;
 }
 
-/***** The HOME PAGE styling. *****/
+.my-base-title {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+
+}
+
+/***** HOME PAGE. *****/
 .my-home-page {
   line-height: var(--line-height-for-readability);
 }
 
-/***** The CONTACT PAGE styling. *****/
+/***** CONTACT PAGE. *****/
 .my-contact {
   font-size: 1.25rem;
   margin-bottom: 30px;
@@ -54,7 +61,8 @@ body {
   text-decoration: none;
 }
 
-/***** The PROJECTS PAGE, a collection of projects in a CSS grid. *****/
+/***** PROJECTS (plural) PAGE *****/
+/* This page displays all of the projects together in a grid. */
 .my-projects-technologies-tag {
   font-size: 0.9rem;
   font-weight: 500;
@@ -115,28 +123,21 @@ body {
   }
 }
 
-/***** Individual PROJECT PAGES. *****/
-.my-project-hero {
+/***** PROJECT (singular) PAGE. *****/
+/* These are the stand-alone project pages detailing each project. */
+.my-project-base-hero {
   width: 100%;
 }
 
-.my-project-heading {
+.my-project-base-title {
   font-size: 1.5rem; 
 }
 
-/* "View in production" animation */
-.my-project-production-tag {
+/* Animatioin for "view in production" tag. */
+.my-project-base-production-tag {
   transition: transform 0.2s ease-in-out;
 }
 
-.my-project-production-tag:hover {
+.my-project-base-production-tag:hover {
   transform: translate(4px, -4px);
-}
-
-/* Don't need to pad as width now much greater than
-var(--line-height-for-readability) */
-@media (min-width: 880px) {
-  .my-project, .my-project-content {
-    padding: 0;
-  }
 }
