--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,30 +19,30 @@
             <!-- Do underline non-active gray links on hover. -->
             {% if request.path == url_for('home') %}
             <a href="{{ url_for('home') }}" class="w3-text-gray w3-bar-item w3-padding-16 
-                my-nav-link-active">Home</a>
+                my-base-nav-link-active">Home</a>
             {% else %}
             <a href="{{ url_for('home') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-nav-link-inactive">Home</a>
+                my-base-nav-link-inactive">Home</a>
             {% endif %}
 
             {% if request.path == url_for('projects_page') %}
             <a href="{{ url_for('projects_page') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-nav-link-active">Projects</a>
+                my-base-nav-link-active">Projects</a>
             {% else %}
             <a href="{{ url_for('projects_page') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-nav-link-inactive">Projects</a>
+                my-base-nav-link-inactive">Projects</a>
             {% endif %}
 
             {% if request.path == url_for('contact') %}
             <a href="{{ url_for('contact') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-nav-link-active">Contact</a>
+                my-base-nav-link-active">Contact</a>
             {% else %}
             <a href="{{ url_for('contact') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-nav-link-inactive">Contact</a>
+                my-base-nav-link-inactive">Contact</a>
             {% endif %}
         </nav>
 
-        <div class="w3-container w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-section my-base-title">
             <h1>Stewart Fraser</h1>
         </div>
 
