--- a/app/templates/project-base.html
+++ b/app/templates/project-base.html
@@ -6,21 +6,19 @@
     <div class="w3-row">
         <div class="w3-col m6">
             <div class="w3-container">
-                <article class="my-project">
-                    <!-- w3-section is 16px margin to top and bottom -->
-                    <img class="my-project-hero w3-section" src="{{ url_for('static', filename=project['hero']) }}"
-                        alt="hero image">
-                </article>
+                <!-- w3-section is 16px margin to top and bottom -->
+                <img class="my-project-base-hero w3-section" src="{{ url_for('static', filename=project['hero']) }}"
+                    alt="hero image">
             </div>
         </div>
         <div class="w3-col m6">
             <article class="w3-container">
-                <h2 class="my-project-heading">
+                <h2 class="my-project-base-title">
                     {{ project['name'] }}
                 </h2>
                 <p>
                     <a href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
-                        <span class="w3-tag w3-round w3-green w3-large my-project-production-tag">View in
+                        <span class="w3-tag w3-round w3-green w3-large my-project-base-production-tag">View in
                             production</span></a>
                 </p>
                 <p>
