--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -2,17 +2,17 @@
 
 {% block project_info %}
 <p>
-    A simple microblogging page. A post is read by python / flask and then saved
+    A simple microblogging site. A post is read by python / flask and then saved
     into a MongoDB database. Previous posts are read by python / flask from the database and
     are displayed on the page where they can be seen and deleted.
 </p>
 <p>
     Mobile-first responsiveness achieved via W3.CSS and media queries.
 </p>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">W3.CSS</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">Python</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">Flask</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">MongoDB</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">W3.CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">Flask</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">MongoDB</div>
 {% endblock %}
