--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -3,13 +3,13 @@
 {% block project_info %}
 <p>
     A dice game for two players that stores the results in the browser's local storage "database".
-    The results will be retrievable after browser or computer shutdown.
+    The results persist even after browser or computer shutdown.
 </p>
 <p>
     Mobile-first responsiveness achieved via media queries.
 </p>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">CSS</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">SASS</div>
-<div class="w3-tag w3-round w3-white my-projects-technologies-tag">JavaScript</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SASS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
 {% endblock %}
