--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,13 +5,16 @@
 <main class="w3-container my-home-page">
     <div class="w3-margin-left">
         <div class="w3-container">
-            <p>
-                A portfolio site to showcase my web development projects.
-            </p>
-            <p>
-                Site is fully responsive and built with a mobile-first design.
-            </p>
-            Technologies used to build this site:
+            <p>A portfolio site to showcase my web development projects.</p>
+            <p>Site is fully responsive and built with a mobile-first design.</p>
+            <p>CV (put here!!!!!!!!)</p>
+            Additional bootcamp completion certificates awarded (courses taken concurrently while doing the JustIT bootcamp):
+            <ul>
+                <li>Python: "The Complete Python Bootcamp" by Jose Portilla (Udemy)</li>
+                <li>SQL: "The Complete SQL Bootcamp" by Jose Portilla (Udemy)</li>
+                <li>JavaScript: "Data Structures and Algorithms" (FreeCodeCamp)</li>
+            </ul>
+            Technologies used to build this portfolio site:
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
