--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -1,6 +1,6 @@
 {% extends "project-base.html" %}
 
-{% block project_info %}
+{% block project_written_content %}
 <p>
     A dice game for two players that stores the results in the browser's local storage "database".
     The results persist even after browser or computer shutdown.
