--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -1,6 +1,6 @@
 {% extends "project-base.html" %}
 
-{% block project_info %}
+{% block project_written_content %}
 <p>
     A web based drum set played using the mouse or the keyboard.
 </p>
