--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -1,6 +1,6 @@
 {% extends "project-base.html" %}
 
-{% block project_info %}
+{% block project_written_content %}
 <p>
     Copy the colour pattern generated. The more you correctly match the pattern, the longer the pattern gets.
     How many levels can you complete?
