--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -1,6 +1,6 @@
 {% extends "project-base.html" %}
 
-{% block project_info %}
+{% block project_written_content %}
 <p>
     A simple microblogging site. A post is read by python / flask and then saved
     into a MongoDB database. Previous posts are read by python / flask from the database and
