--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -3,7 +3,7 @@
 <!-- Projects shown in a css grid via a for loop. -->
 <!-- Projects are described via a common dictionary format detailed in __init__.py. -->
 {% block content %}
-<main class="w3-panel">
+<main class="w3-panel my-projects-base-container">
     <section class="w3-row-padding">
         {% for project in projects %}
         <!-- Responsive w3.css grid. -->
