handling tiny screens < 311px. temporarily removing custom w3.css grid breakpoint. MQ adaptive page width limits added. more specific css class names.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,8 +42,8 @@
             {% endif %}
         </nav>
 
-        <div class="w3-container w3-section my-base-title">
-            <h1>Stewart Fraser</h1>
+        <div class="w3-container w3-section">
+            <h1 class="my-base-title-header">Stewart Fraser</h1>
         </div>
 
     </header>
