--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
 <!-- The body for the about page. -->
 {% block content %}
-<main class="w3-container my-home-page-limit-width">
+<main class="w3-container my-home-page-container my-home-page-limit-width">
     <div class="w3-margin-left">
         <div class="w3-container">
             <p>A portfolio site to showcase my web development projects.</p>
