--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -6,8 +6,12 @@
     into a MongoDB database. Previous posts are read by python / flask from the database and
     are displayed on the page where they can be seen and deleted.
 </p>
+<div class="my-project-microblog-diagram-wrapper">
+    <img class="my-project-microblog-diagram" src="{{ url_for('static', filename='images/microblog.drawio.png') }}"
+        alt="setup diagram">
+</div>
 <p>
-    Mobile-first responsiveness achieved via W3.CSS and media queries.
+Mobile-first responsiveness achieved via W3.CSS and media queries.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
