--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
         <div class="w3-container">
             <p>A portfolio site to showcase my web development projects.</p>
             <p>Site is fully responsive and built with a mobile-first design.</p>
-            <p>CV (put here!!!!!!!!)</p>
+            <p>CV / IET (put here!!!!!!!!)</p>
             Additional bootcamp completion certificates awarded (courses taken concurrently while doing the JustIT bootcamp):
             <ul>
                 <li>Python: "The Complete Python Bootcamp" by Jose Portilla (Udemy)</li>
@@ -22,6 +22,8 @@
                 <li>Python</li>
                 <li>Flask</li>
             </ul>
+            Improvements: could add user authentication to microblog, each user access to own DB.
+
         </div>
     </div>
 </main>
